# dataclass-config

./: .gitignore  README.md  pyproject.toml  pytest.ini
dataclass_config/: __init__.py  config_bases.py  immutable.py  parsers.py
examples/: field_validation.py  python_config.py
helloconfig/: config_bases.py  exceptions.py  immutable.py  parsers.py
helloconfig/parsers/: __init__.py  base.py  parsers.py  python.py
tests/: conftest.py  test_config.py  test_env_parser.py  test_ini_parser.py  test_json_parser.py  test_python_parser.py  test_yaml_parser.py
