[project]
name = "dataclass_config"
version = "0.1.0"
authors = [
  { name="Elchin Sarkarov", email="elchin751@gmail.com" },
]
description = "SSH Forward Daemon"
requires-python = ">=3.7"
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: Apache Software License",
  "Operating System :: POSIX",
  "Operating System :: Microsoft :: Windows",
]
dependencies = [ "dataclass_factory", "pyyaml" ]
readme = "README.md"

[project.urls]
"Homepage" = "https://github.com/elchinchel/dataclass-config"
"Bug Tracker" = "https://github.com/elchinchel/dataclass-config/issues"

[project.optional-dependencies]
test = [ "pytest", "pytest-cov" ]

[tool.setuptools]
packages = ["dataclass_config"]

[build-system]
requires = ["setuptools>=40.8.0"]
build-backend = "setuptools.build_meta"

[tool.pyright]
typeCheckingMode = "basic"
